...
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/gray"
                android:filterTouchesWhenObscured="true" />

            <RelativeLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/clickable_layout"
                android:clickable="true"
                android:filterTouchesWhenObscured="true">

...
                android:layout_height="@dimen/separator_height"
                android:layout_marginTop="30dp"
                android:background="@color/gray"
                android:filterTouchesWhenObscured="true" />

            <RelativeLayout
                android:id="@+id/local_currency"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/clickable_layout"
                android:clickable="true"
                android:filterTouchesWhenObscured="true">

...
                android:layout_height="@dimen/separator_height"
                android:layout_marginStart="20dp"
                android:background="@color/gray"
                android:filterTouchesWhenObscured="true" />

            <RelativeLayout
                android:id="@+id/start_recovery_wallet"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/clickable_layout"
                android:clickable="true"
                android:filterTouchesWhenObscured="true">

...
