...
        android:id="@+id/local_currency"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:filterTouchesWhenObscured="true">

        <ListView
            android:id="@+id/currency_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cacheColorHint="@android:color/transparent"
            android:filterTouchesWhenObscured="true"
            android:listSelector="@color/white" />

...
